# slack-cli

./: .gitignore  .releaserc.json  CLAUDE.md  Cargo.toml  README.md  SKILL.md  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  publish.yml  release.yml
docs/: comparison-slkcli.md  ecosystem.md
rs/src/: main.rs  slack.rs
src/: lib.rs  main.rs  slack.rs
tests/: anonymize.ts  auth.test.ts  format.test.ts  mock.ts  parity.sh  parity.test.ts  profiles.test.ts  record.ts  rtm.test.ts  slack.test.ts  tail.test.ts
tests/fixtures/: .gitignore
tests/fixtures/anon/: auth.test.json  conversations.history__channel=C046S4RH6GG&limit=20.json  conversations.history__channel=C046S4RJ1U0&limit=20.json  conversations.history__channel=C04BK4K0JKF&limit=20.json  conversations.list__exclude_archived=true&limit=20&types=public_channel.json  conversations.list__limit=200&types=public_channel_private_channel_im_mpim.json  search.messages__count=10&page=1&query=deploy&sort=timestamp&sort_dir=desc.json  search.messages__count=100&page=1&query=deploy&sort=timestamp&sort_dir=desc.json  search.messages__count=20&page=1&query=to_me&sort=timestamp&sort_dir=desc.json
tests/fixtures/mock/: conversations.list__exclude_archived=true&limit=20&types=public_channel.json  conversations.list__limit=200&types=public_channel_private_channel_im_mpim.json
ts/: auth.ts  cli.ts  format.ts  profiles.ts  rtm.ts  slack-app.ts  slack.ts  tail.ts
