[package]
name = "slack-cli"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "slack"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "native-tls"] }
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
napi = { version = "3", features = ["tokio_rt", "async"] }
napi-derive = "3"

[build-dependencies]
napi-build = "1"
