[package]
name = "slack-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "slack"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
ring = "0.17"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
